--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,17 @@
 
-                               /*section 1*/
+                                                   /*basic*/
+
+
+body { padding-bottom: 100px; } 
+
+.dib { display: inline-block; }    
+
+
+                                                     /*section 1*/
 
 .section1 { background-color: #363E97; }
 
-.container { width: 1170px;
+.s1-container { width: 1170px;
              margin: 0 auto; }
 
 .s1-box { display: flex;
@@ -19,6 +27,83 @@
 
 .s1-box2 { background-color: yellow; }
 
-                              /*section 2*/
 
-.s2-box {  }
+                                                      /*section 2*/
+
+
+.section2 { background-color: #E6E6E6;
+            margin-top: 50px; }
+
+.s2-container { width: 1170px;
+                margin: 0 auto; }
+
+.s2-h2 { margin-bottom: 30px;
+         padding-top: 30px; }
+
+.s2-box { display: flex;
+          justify-content: space-between;
+          align-items: center; }
+
+.s2-box1,
+.s2-box2 { width: 570px;
+           background-color: #F2F2F2; }
+
+.s2-h3 { margin-bottom: 20px;
+         margin-top: 20px;
+         margin-left: 30px; }
+
+.s2-article1,
+.s2-article2 { display: flex;
+               align-items: center;
+               justify-content: space-evenly; }
+
+.s2-p1,
+.s2-p2 { width: 355px; }
+
+.s2-read { display: flex;
+           justify-content: flex-end;
+           margin-right: 30px;
+           margin-bottom: 20px; }
+           
+
+                                                       /*section 3*/
+
+.section3 { margin-top: 50px; }
+
+.s3-container { width: 1170px;
+                margin: 0 auto; }
+
+.s3-box { display: flex;
+          justify-content: space-evenly; }
+
+.s3-img { width: 270px; }
+
+
+
+
+
+
+
+
+                                                         /*footer*/
+
+.fa-facebook-f { margin-left: 109.5px;
+                 margin-bottom: 38.7px;
+                 margin-top: 137px;
+                 font-size: 30px;
+                 color: black;
+                 transition: 2s; }
+
+ .fa-facebook-f:hover { color: skyblue; }                
+
+.fa-youtube { font-size: 30px;
+              color: black;
+              transition: 2s; }
+
+.fa-youtube:hover { color: red; }
+
+.divider { height: 25px;
+           width: 2px;
+           background-color: #363E97;
+           margin-left: 35.6px;
+           margin-right: 30.2px; }
